--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -192,27 +192,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "type\n",
-       "Rural         537\n",
-       "Suburban     8570\n",
-       "Urban       59602\n",
+       "Rural         78\n",
+       "Suburban     490\n",
+       "Urban       2405\n",
        "Name: driver_count, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 2. Get the total drivers for each city type\n",
-    "total_drivers = pyber_data_df.groupby([\"type\"]).sum()[\"driver_count\"]\n",
+    "total_drivers = city_data_df.groupby([\"type\"]).sum()[\"driver_count\"]\n",
     "total_drivers"
    ]
   },
@@ -270,20 +270,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "type\n",
-       "Rural       8.059460\n",
-       "Suburban    2.258615\n",
-       "Urban       0.668675\n",
+       "Rural       55.486282\n",
+       "Suburban    39.502714\n",
+       "Urban       16.571468\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -339,26 +339,26 @@
        "    <tr>\n",
        "      <th>Rural</th>\n",
        "      <td>125</td>\n",
-       "      <td>537</td>\n",
+       "      <td>78</td>\n",
        "      <td>4327.93</td>\n",
        "      <td>34.623440</td>\n",
-       "      <td>8.059460</td>\n",
+       "      <td>55.486282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Suburban</th>\n",
        "      <td>625</td>\n",
-       "      <td>8570</td>\n",
+       "      <td>490</td>\n",
        "      <td>19356.33</td>\n",
        "      <td>30.970128</td>\n",
-       "      <td>2.258615</td>\n",
+       "      <td>39.502714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Urban</th>\n",
        "      <td>1625</td>\n",
-       "      <td>59602</td>\n",
+       "      <td>2405</td>\n",
        "      <td>39854.38</td>\n",
        "      <td>24.525772</td>\n",
-       "      <td>0.668675</td>\n",
+       "      <td>16.571468</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -367,18 +367,18 @@
       "text/plain": [
        "          Total Rides  Total Drivers  Total Fares  Average Fare per Ride  \\\n",
        "type                                                                       \n",
-       "Rural             125            537      4327.93              34.623440   \n",
-       "Suburban          625           8570     19356.33              30.970128   \n",
-       "Urban            1625          59602     39854.38              24.525772   \n",
+       "Rural             125             78      4327.93              34.623440   \n",
+       "Suburban          625            490     19356.33              30.970128   \n",
+       "Urban            1625           2405     39854.38              24.525772   \n",
        "\n",
        "          Average Fare per Driver  \n",
        "type                               \n",
-       "Rural                    8.059460  \n",
-       "Suburban                 2.258615  \n",
-       "Urban                    0.668675  "
+       "Rural                   55.486282  \n",
+       "Suburban                39.502714  \n",
+       "Urban                   16.571468  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,6 +394,91 @@
     "\n",
     "#pyber_summary = pyber_summary_df.groupby(\"type\")\n",
     "#pyber_summary_df                                 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Rides</th>\n",
+       "      <th>Total Drivers</th>\n",
+       "      <th>Total Fares</th>\n",
+       "      <th>Average Fare per Ride</th>\n",
+       "      <th>Average Fare per Driver</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rural</th>\n",
+       "      <td>125</td>\n",
+       "      <td>78</td>\n",
+       "      <td>4327.93</td>\n",
+       "      <td>34.623440</td>\n",
+       "      <td>55.486282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Suburban</th>\n",
+       "      <td>625</td>\n",
+       "      <td>490</td>\n",
+       "      <td>19356.33</td>\n",
+       "      <td>30.970128</td>\n",
+       "      <td>39.502714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Urban</th>\n",
+       "      <td>1625</td>\n",
+       "      <td>2405</td>\n",
+       "      <td>39854.38</td>\n",
+       "      <td>24.525772</td>\n",
+       "      <td>16.571468</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Total Rides  Total Drivers  Total Fares  Average Fare per Ride  \\\n",
+       "Rural             125             78      4327.93              34.623440   \n",
+       "Suburban          625            490     19356.33              30.970128   \n",
+       "Urban            1625           2405     39854.38              24.525772   \n",
+       "\n",
+       "          Average Fare per Driver  \n",
+       "Rural                   55.486282  \n",
+       "Suburban                39.502714  \n",
+       "Urban                   16.571468  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  7. Cleaning up the DataFrame. Delete the index name\n",
+    "pyber_summary_df.index.name = None\n",
+    "pyber_summary_df"
    ]
   },
   {
@@ -433,111 +518,26 @@
        "    <tr>\n",
        "      <th>Rural</th>\n",
        "      <td>125</td>\n",
-       "      <td>537</td>\n",
-       "      <td>4327.93</td>\n",
-       "      <td>34.623440</td>\n",
-       "      <td>8.059460</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Suburban</th>\n",
-       "      <td>625</td>\n",
-       "      <td>8570</td>\n",
-       "      <td>19356.33</td>\n",
-       "      <td>30.970128</td>\n",
-       "      <td>2.258615</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Urban</th>\n",
-       "      <td>1625</td>\n",
-       "      <td>59602</td>\n",
-       "      <td>39854.38</td>\n",
-       "      <td>24.525772</td>\n",
-       "      <td>0.668675</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Total Rides  Total Drivers  Total Fares  Average Fare per Ride  \\\n",
-       "Rural             125            537      4327.93              34.623440   \n",
-       "Suburban          625           8570     19356.33              30.970128   \n",
-       "Urban            1625          59602     39854.38              24.525772   \n",
-       "\n",
-       "          Average Fare per Driver  \n",
-       "Rural                    8.059460  \n",
-       "Suburban                 2.258615  \n",
-       "Urban                    0.668675  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#  7. Cleaning up the DataFrame. Delete the index name\n",
-    "pyber_summary_df.index.name = None\n",
-    "pyber_summary_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total Rides</th>\n",
-       "      <th>Total Drivers</th>\n",
-       "      <th>Total Fares</th>\n",
-       "      <th>Average Fare per Ride</th>\n",
-       "      <th>Average Fare per Driver</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Rural</th>\n",
-       "      <td>125</td>\n",
-       "      <td>537</td>\n",
+       "      <td>78</td>\n",
        "      <td>$4,327.93</td>\n",
        "      <td>$34.62</td>\n",
-       "      <td>$8.06</td>\n",
+       "      <td>$55.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Suburban</th>\n",
        "      <td>625</td>\n",
-       "      <td>8570</td>\n",
+       "      <td>490</td>\n",
        "      <td>$19,356.33</td>\n",
        "      <td>$30.97</td>\n",
-       "      <td>$2.26</td>\n",
+       "      <td>$39.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Urban</th>\n",
        "      <td>1625</td>\n",
-       "      <td>59602</td>\n",
+       "      <td>2405</td>\n",
        "      <td>$39,854.38</td>\n",
        "      <td>$24.53</td>\n",
-       "      <td>$0.67</td>\n",
+       "      <td>$16.57</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -545,17 +545,17 @@
       ],
       "text/plain": [
        "          Total Rides  Total Drivers Total Fares Average Fare per Ride  \\\n",
-       "Rural             125            537   $4,327.93                $34.62   \n",
-       "Suburban          625           8570  $19,356.33                $30.97   \n",
-       "Urban            1625          59602  $39,854.38                $24.53   \n",
+       "Rural             125             78   $4,327.93                $34.62   \n",
+       "Suburban          625            490  $19,356.33                $30.97   \n",
+       "Urban            1625           2405  $39,854.38                $24.53   \n",
        "\n",
        "         Average Fare per Driver  \n",
-       "Rural                      $8.06  \n",
-       "Suburban                   $2.26  \n",
-       "Urban                      $0.67  "
+       "Rural                     $55.49  \n",
+       "Suburban                  $39.50  \n",
+       "Urban                     $16.57  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "4            46  Urban  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Rural</th>\n",
+       "      <th rowspan=\"10\" valign=\"top\">Rural</th>\n",
        "      <th>2019-01-01 09:45:36</th>\n",
        "      <td>43.69</td>\n",
        "    </tr>\n",
@@ -745,34 +745,27 @@
        "      <td>47.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
+       "      <th>2019-01-08 06:19:45</th>\n",
+       "      <td>19.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Urban</th>\n",
-       "      <th>2019-05-08 04:20:00</th>\n",
-       "      <td>21.99</td>\n",
+       "      <th>2019-01-09 15:30:35</th>\n",
+       "      <td>31.84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-05-08 04:39:49</th>\n",
-       "      <td>18.45</td>\n",
+       "      <th>2019-01-11 04:39:27</th>\n",
+       "      <td>16.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-05-08 07:29:01</th>\n",
-       "      <td>18.55</td>\n",
+       "      <th>2019-01-14 07:09:17</th>\n",
+       "      <td>18.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-05-08 11:38:35</th>\n",
-       "      <td>19.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-05-08 13:10:18</th>\n",
-       "      <td>18.04</td>\n",
+       "      <th>2019-01-14 15:58:48</th>\n",
+       "      <td>54.10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2375 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -783,17 +776,14 @@
        "      2019-01-03 19:51:01        19.90\n",
        "      2019-01-04 03:31:26        24.88\n",
        "      2019-01-06 07:38:40        47.33\n",
-       "...                                ...\n",
-       "Urban 2019-05-08 04:20:00        21.99\n",
-       "      2019-05-08 04:39:49        18.45\n",
-       "      2019-05-08 07:29:01        18.55\n",
-       "      2019-05-08 11:38:35        19.77\n",
-       "      2019-05-08 13:10:18        18.04\n",
-       "\n",
-       "[2375 rows x 1 columns]"
+       "      2019-01-08 06:19:45        19.39\n",
+       "      2019-01-09 15:30:35        31.84\n",
+       "      2019-01-11 04:39:27        16.42\n",
+       "      2019-01-14 07:09:17        18.05\n",
+       "      2019-01-14 15:58:48        54.10"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +792,6 @@
     "# 2. Using groupby() to create a new DataFrame showing the sum of the fares \n",
     "#  for each date where the indices are the city type and date.\n",
     "\n",
-    "#yber_data_df.set_index([\"type\"], [\"date\"]\n",
     "type_groups = pyber_data_df.groupby([\"type\",\"date\"])\n",
     "\n",
     "\n",
@@ -810,13 +799,13 @@
     "fares_per_date\n",
     "\n",
     "fares_per_date_df = pd.DataFrame({\"total_fares\": fares_per_date})                         \n",
-    "                    \n",
-    "fares_per_date_df"
+    "                   \n",
+    "fares_per_date_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +931,7 @@
        "2019-01-01 14:52:06    NaN     31.15    NaN"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1082,32 +1071,32 @@
        "[2196 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 5. Create a new DataFrame from the pivot table DataFrame using loc on the given dates, '2019-01-01':'2019-04-29'.\n",
-    "fares_given_date = total_fares_pivot.loc['2019-01-01':'2019-04-29'] \n",
-    "fares_given_date"
+    "fares_given_date_df = pd.DataFrame(total_fares_pivot.loc['2019-01-01':'2019-04-29']) \n",
+    "fares_given_date_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 6. Set the \"date\" index to datetime datatype. This is necessary to use the resample() method in Step 8.\n",
     "# df.index = pd.to_datetime(df.index)\n",
     "\n",
-    "fares_given_date.index = pd.to_datetime(fares_given_date.index)"
+    "fares_given_date_df.index = pd.to_datetime(fares_given_date_df.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1129,12 +1118,12 @@
    ],
    "source": [
     "# 7. Check that the datatype for the index is datetime using df.info()\n",
-    "fares_given_date.info()"
+    "fares_given_date_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1287,7 @@
        "2019-04-28  191.85   1357.75  2238.29"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1295,7 @@
    "source": [
     "# 8. Create a new DataFrame using the \"resample()\" function by week 'W' and get the sum of the fares for each week.\n",
     "#.resample('W').count()\n",
-    "fares_per_week = fares_given_date.resample('W').sum()\n",
+    "fares_per_week = fares_given_date_df.resample('W').sum()\n",
     "fares_per_week\n",
     "fares_per_week_df = pd.DataFrame(fares_per_week)\n",
     "fares_per_week_df"
@@ -1341,7 +1330,10 @@
     "fare_chart.set_xlabel(\"Month\") \n",
     "fare_chart.set_ylabel(\"Fare \"  + \"($USD)\") \n",
     "\n",
-    "plt.show()\n"
+    "plt.savefig(\"analysis/PyBer_fare_summary.png\")\n",
+    "plt.show()\n",
+    "\n",
+    "\n"
    ]
   },
   {
